--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,61 @@
-.App {
-  text-align: center;
+*{
+  margin: 0;
+  padding: 0;
+  text-decoration: none !important;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.layout img{
+  width: 128px;
+}
+.layout {
+  width: 100%;
+  
+  background-color: #d3d3d3;
+  
+  
+
+  display: flex;
+  gap: 16px;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.grow3 { 
+  flex-grow: 3; 
+  
+}
+.ulHeader{
+display: flex;
+justify-content: space-evenly;
+margin-top: 2rem;
+}
+.botones button{
+  font-size: 70%;
+  margin: 2%;
+  
+}
+.botones{
+  margin: 5%;
+}
+ul{
+  list-style: none;
+  
+}
+li a{
+  color: black;
+  border-radius: 5%;
+  background-color: white;
+  font-size: 110%;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.btns{
+  display: flex;
+  align-items: baseline;
+}
+.ctdCart{
+  padding: 1rem 0.375rem;
+}
+.btnsCnt{
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
 
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
 }
