--- a/src/App.css
+++ b/src/App.css
@@ -103,3 +103,27 @@ li a{
     transform: rotate(360deg);
   }
 }
+.layoutDETAIL{
+  display: flex;
+    justify-content: space-evenly;
+    margin-right: 20% ;
+    margin-left: 20%;
+    
+   
+}
+.imageDETAIL{
+  display: flex;
+  justify-content: center;
+}
+.cntDETAIL{
+  text-align: center;
+  background-image: linear-gradient(45deg, #833ab4, #fd1d1d);border-radius: 25% 5%;
+  width: 40%;
+  color: white;
+  margin-top: 5%;
+}
+.cntCNT{
+  display: flex;
+  justify-content: center;
+  
+}
